<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>

        <variable
            name="viewModel"
            type="com.example.calculator.CalculatorViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingLeft="4dp"
        android:paddingRight="4dp">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/editTextNumber"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp"
                android:hint="@string/enter_a_number"
                android:inputType="numberSigned|numberDecimal"
                android:maxLength="20"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TableRow android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/factorial" />

                <Button
                    android:id="@+id/buttonFactorial"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/run"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewFactorial"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="4" />

            </TableRow>

            <TableRow android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/square_root" />

                <Button
                    android:id="@+id/buttonSquareCubeRoot"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/run"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewSquareRoot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="4" />

            </TableRow>

            <TableRow android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/cube_root" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/textViewCubeRoot"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="4" />

            </TableRow>

            <TableRow android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/lg" />

                <Button
                    android:id="@+id/buttonLogarithms"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/run"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewLog10"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="4" />

            </TableRow>

            <TableRow android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/ln" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/textViewNaturalLog"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="4" />

            </TableRow>

            <TableRow android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/squaring" />

                <Button
                    android:id="@+id/buttonSquaringCubing"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/run"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewSquare"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="4" />

            </TableRow>

            <TableRow android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/cubing" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:text="@string/empty" />

                <TextView
                    android:id="@+id/textViewCube"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="4" />

            </TableRow>

            <TableRow android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/prime_test" />

                <Button
                    android:id="@+id/buttonPrimeTest"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/run"
                    android:textAlignment="center" />

                <TextView
                    android:id="@+id/textViewPrimeTest"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="4" />

            </TableRow>

            <TableRow android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/run_all" />

                <Button
                    android:id="@+id/buttonRunAll"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:gravity="center"
                    android:text="@string/run"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="4dp"
                    android:layout_weight="4"
                    android:text="@string/empty" />

            </TableRow>

            <TableRow
                android:layout_marginBottom="20dp"
                android:padding="8dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:ellipsize="end"
                    android:maxLines="1"
                    android:text="@string/empty" />

                <Button
                    android:id="@+id/buttonClear"
                    style="@style/ButtonStyle"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="5"
                    android:gravity="center"
                    android:text="@string/clear"
                    android:textAlignment="center" />

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:text="@string/empty" />

            </TableRow>

        </TableLayout>

    </ScrollView>
</layout>

